Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <p><img src="http://img.shields.io/travis/paulstringer/OCSlimProject.svg?style=flat" alt="CI Status">
-<img src="https://img.shields.io/cocoapods/v/OCSlimProject.svg?style=flat" alt="Version">](<a href="http://cocoapods.org/pods/OCSlimProject">http://cocoapods.org/pods/OCSlimProject</a>)
-<img src="https://img.shields.io/cocoapods/l/OCSlimProject.svg?style=flat" alt="License">](<a href="http://cocoapods.org/pods/OCSlimProject">http://cocoapods.org/pods/OCSlimProject</a>)
-<img src="https://img.shields.io/cocoapods/p/OCSlimProject.svg?style=flat" alt="Platform">](<a href="http://cocoapods.org/pods/OCSlimProject">http://cocoapods.org/pods/OCSlimProject</a>)
-<img src="http://img.shields.io/travis/paulstringer/OCSlimProject.svg?style=flat" alt="CI Status X">
-OCSlimProject is a lightweight Xcode project template and set of scripts for creating fast, rock solid, non UI based Acceptance Tests on iOS and OS X using <a href="http://fitnesse.org">Fitnesse</a>.</p>
+<img src="https://img.shields.io/cocoapods/v/OCSlimProject.svg?style=flat" alt="Version">
+<img src="https://img.shields.io/cocoapods/l/OCSlimProject.svg?style=flat" alt="License">
+<img src="https://img.shields.io/cocoapods/p/OCSlimProject.svg?style=flat" alt="Platform"></p>
+
+<p>OCSlimProject is a lightweight Xcode project template and set of scripts for creating fast, rock solid, non UI based Acceptance Tests on iOS and OS X using <a href="http://fitnesse.org">Fitnesse</a>.</p>
 
 <h3>
 <a id="how-to-use" class="anchor" href="#how-to-use" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How to Use</h3>
