--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 
 <ul>
 <li>Download OCSlimProject</li>
-<li>Run <code>$ make</code>. This will add the Xcode project templates for creating Acceptance Test targets within Xcode (iOS &amp; OS X).</li>
-<li>Add an 'Acceptance Testing' target to your Project using the Acceptance Test templates now installed under the Test categories</li>
-<li>Using CocoaPods link OCSlimProject to your Acceptance Tests target with the following Podfile entry</li>
+<li>Run <code>$ make</code>. This adds the Xcode project templates for creating Acceptance Test targets within Xcode (iOS &amp; OS X).</li>
+<li>Add an 'Acceptance Testing' target to your Project using the <em>Acceptance Test</em> templates now installed under the Test project categories</li>
+<li>Using CocoaPods link <em>OCSlimProject</em> to your Acceptance Tests target with the following Podfile entry</li>
 </ul>
 
 <pre><code>    target 'AcceptanceTests' do
@@ -56,7 +56,7 @@
 </code></pre>
 
 <ul>
-<li>Build the project to generate the Application (repeat this after code changes)</li>
+<li>Build the project to generate the Application (repeat this after each code change)</li>
 <li>Launch Fitnesse by running the script <code>./LaunchFitnesse</code> that's generated automatically in your project's root directory</li>
 <li>Follow the prompt to download <a href="http://www.fitnesse.org/FitNesseDownload">Fitnesse</a> to the  root of your project</li>
 <li>With Fitnesse running, check out the <a href="http://localhost:8080/CocoaSlimExamplePage">example</a> provided in Fitnesse.</li>
@@ -71,27 +71,31 @@
 <h3>
 <a id="ocslim-runteststargetwithslimport" class="anchor" href="#ocslim-runteststargetwithslimport" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>OCSlim, RunTestsTargetWithSlimPort</h3>
 
-<p>Created by: Erik Meyer, 8th Light <a href="https://blog.8thlight.com/eric-meyer/archive.html">https://blog.8thlight.com/eric-meyer/archive.html</a>
-<a href="https://github.com/ericmeyer/ObjectiveCSlim">https://github.com/ericmeyer/ObjectiveCSlim</a>
+<p>Created by: Erik Meyer, 8th Light <a href="https://blog.8thlight.com/eric-meyer/archive.html">https://blog.8thlight.com/eric-meyer/archive.html</a></p>
+
+<p><a href="https://github.com/ericmeyer/ObjectiveCSlim">https://github.com/ericmeyer/ObjectiveCSlim</a>
 <a href="https://github.com/dougbradbury/cslim/tree/ocslim">https://github.com/dougbradbury/cslim/tree/ocslim</a></p>
 
 <h3>
 <a id="ios-sim" class="anchor" href="#ios-sim" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>ios-sim</h3>
 
-<p>Created by: Phonegap, <a href="http://phonegap.com">http://phonegap.com</a>
-<a href="https://github.com/phonegap/ios-sim">https://github.com/phonegap/ios-sim</a></p>
+<p>Created by: Phonegap, <a href="http://phonegap.com">http://phonegap.com</a></p>
+
+<p><a href="https://github.com/phonegap/ios-sim">https://github.com/phonegap/ios-sim</a></p>
 
 <h3>
 <a id="exportenvsh" class="anchor" href="#exportenvsh" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>exportenv.sh</h3>
 
-<p>Created by: Jon Reid, <a href="http://qualitycoding.org/">http://qualitycoding.org/</a>
-<a href="https://github.com/jonreid/XcodeCoverage">https://github.com/jonreid/XcodeCoverage</a></p>
+<p>Created by: Jon Reid, <a href="http://qualitycoding.org/">http://qualitycoding.org/</a></p>
+
+<p><a href="https://github.com/jonreid/XcodeCoverage">https://github.com/jonreid/XcodeCoverage</a></p>
 
 <h3>
 <a id="xcode-project-templates-launchfitnesse" class="anchor" href="#xcode-project-templates-launchfitnesse" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Xcode Project Templates, LaunchFitnesse</h3>
 
-<p>Created by: Paul Stringer, <a href="http://stringerstheory.net">http://stringerstheory.net</a>
-<a href="https://github.com/paulstringer/Slim-iOS-TestRunner">https://github.com/paulstringer/Slim-iOS-TestRunner</a></p>
+<p>Created by: Paul Stringer, <a href="http://stringerstheory.net">http://stringerstheory.net</a></p>
+
+<p><a href="https://github.com/paulstringer/Slim-iOS-TestRunner">https://github.com/paulstringer/Slim-iOS-TestRunner</a></p>
 
 <h5>
 <a id="license" class="anchor" href="#license" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>License</h5>
