Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 
 <p>OCSlimProject is a lightweight Xcode project template and set of scripts for creating fast, rock solid, non UI based Acceptance Tests on iOS and OS X using <a href="http://fitnesse.org">Fitnesse</a>.</p>
 
+<p>Check out the <a href="http://stringerstheory.net/nslondon-video/">video from NSLondon</a> to see this in action.</p>
+
 <hr>
 
 <h3>
