Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
 <li>Build the <em>AcceptanceTests</em> target to generate the Application (repeat this after each code change)</li>
 <li>Launch Fitnesse by running the script <code>./LaunchFitnesse</code> that's generated automatically in your project's root directory</li>
 <li>Follow the prompt to download <a href="http://www.fitnesse.org/FitNesseDownload">Fitnesse</a> to the  root of your project</li>
-<li>With Fitnesse running, check out the <a href="http://localhost:8080/CocoaSlimExamplePage">example</a> provided in Fitnesse.</li>
+<li>Copy the folder at OCSlimProject/Example/FitNesseRoot/OCSlimProjectExamplePage into your project's FitNesseRoot folder</li>
+<li>With Fitnesse running now check out the <a href="http://localhost:8080/OCSlimProjectExamplePage">OCSlimProjectExamplePage</a>.</li>
 <li>You're now ready to start writing <a href="http://stringerstheory.net/acceptance-testing-with-ios/">Acceptance tests and Fixtures</a>  in Obj-C or Swift and excercising them with Fitnesse.</li>
 </ul>
 
