Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </code></pre>
 
 <ul>
-<li>Run <code>pod install</code> or  <code>pod update</code> as needed</li>
+<li>Run either <code>pod install</code> or  <code>pod update</code> as needed</li>
 <li>Build the <em>AcceptanceTests</em> target to generate the Application (repeat this after each code change)</li>
 <li>Launch Fitnesse by running the script <code>./LaunchFitnesse</code> that's generated automatically in your project's root directory</li>
 <li>Follow the prompt to download <a href="http://www.fitnesse.org/FitNesseDownload">Fitnesse</a> to the  root of your project</li>
