Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
 <img src="https://img.shields.io/cocoapods/l/OCSlimProject.svg?style=flat" alt="License">
 <img src="https://img.shields.io/cocoapods/p/OCSlimProject.svg?style=flat" alt="Platform"></p>
 
-<p>OCSlimProject is a lightweight Xcode project template and set of scripts for creating fast, rock solid, non UI based Acceptance Tests on iOS and OS X using <a href="http://fitnesse.org">Fitnesse</a>.</p>
+<h3>
+<a id="ocslimproject-is-a-lightweight-xcode-project-template-and-set-of-scripts-for-creating-fast-rock-solid-non-ui-based-acceptance-tests-on-ios-and-os-x-using-fitnesse" class="anchor" href="#ocslimproject-is-a-lightweight-xcode-project-template-and-set-of-scripts-for-creating-fast-rock-solid-non-ui-based-acceptance-tests-on-ios-and-os-x-using-fitnesse" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>OCSlimProject is a lightweight Xcode project template and set of scripts for creating fast, rock solid, non UI based Acceptance Tests on iOS and OS X using <a href="http://fitnesse.org">Fitnesse</a>.</h3>
 
-<p>Check out the <a href="http://stringerstheory.net/nslondon-video/">video from NSLondon</a> to see it in action.</p>
+<p>Check out this <a href="http://stringerstheory.net/nslondon-video/">video from NSLondon</a> to see it in action.</p>
 
 <hr>
 
@@ -59,7 +60,7 @@
 
 <ul>
 <li>Run either <code>pod install</code> or  <code>pod update</code> as needed</li>
-<li>Build the <em>AcceptanceTests</em> target to generate the Application (repeat this after each code change)</li>
+<li>Build the 'AcceptanceTests' target to generate the Application (repeat this after each code change)</li>
 <li>Launch Fitnesse by running the script <code>./LaunchFitnesse</code> that's generated automatically in your project's root directory</li>
 <li>Follow the prompt to download <a href="http://www.fitnesse.org/FitNesseDownload">Fitnesse</a> to the  root of your project</li>
 <li>Copy the folder at OCSlimProject/Example/FitNesseRoot/OCSlimProjectExamplePage into your project's FitNesseRoot folder</li>
@@ -70,39 +71,40 @@
 <h1>
 <a id="acknowledgements" class="anchor" href="#acknowledgements" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Acknowledgements</h1>
 
-<p>The owner of this repository takes no credit for the following included resources (except for the ones credited to the owner). This is a convienient lightweight wrapper either inspired by or using these resources together with some project glue automating the process of creating 'ocslim' based Apps for use with Fitnesse. </p>
+<p>The owner of this repository takes no credit for the following included resources (except for the ones credited to the owner). This is a convienient lightweight wrapper either inspired by or using these resources together with some project glue to automate the process of creating 'ocslim' based Apps for use with Fitnesse. </p>
 
 <h3>
 <a id="ocslim-runteststargetwithslimport" class="anchor" href="#ocslim-runteststargetwithslimport" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>OCSlim, RunTestsTargetWithSlimPort</h3>
 
-<p>Created by: Erik Meyer, 8th Light <a href="https://blog.8thlight.com/eric-meyer/archive.html">https://blog.8thlight.com/eric-meyer/archive.html</a></p>
+<p>Created by: Erik Meyer, 8th Light </p>
 
-<p><a href="https://github.com/ericmeyer/ObjectiveCSlim">https://github.com/ericmeyer/ObjectiveCSlim</a>
-<a href="https://github.com/dougbradbury/cslim/tree/ocslim">https://github.com/dougbradbury/cslim/tree/ocslim</a></p>
+<p><a href="https://github.com/ericmeyer/ObjectiveCSlim">https://github.com/ericmeyer/ObjectiveCSlim</a></p>
+
+<p><a href="https://github.com/dougbradbury/cslim/tree/ocslim">https://github.com/dougbradbury/cslim/tree/ocslim</a></p>
 
 <h3>
 <a id="ios-sim" class="anchor" href="#ios-sim" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>ios-sim</h3>
 
-<p>Created by: Phonegap, <a href="http://phonegap.com">http://phonegap.com</a></p>
+<p>Created by: Phonegap</p>
 
 <p><a href="https://github.com/phonegap/ios-sim">https://github.com/phonegap/ios-sim</a></p>
 
 <h3>
 <a id="exportenvsh" class="anchor" href="#exportenvsh" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>exportenv.sh</h3>
 
-<p>Created by: Jon Reid, <a href="http://qualitycoding.org/">http://qualitycoding.org/</a></p>
+<p>Created by: Jon Reid</p>
 
 <p><a href="https://github.com/jonreid/XcodeCoverage">https://github.com/jonreid/XcodeCoverage</a></p>
 
 <h3>
 <a id="xcode-project-templates-launchfitnesse" class="anchor" href="#xcode-project-templates-launchfitnesse" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Xcode Project Templates, LaunchFitnesse</h3>
 
-<p>Created by: Paul Stringer, <a href="http://stringerstheory.net">http://stringerstheory.net</a></p>
+<p>Created by: Paul Stringer</p>
 
 <p><a href="https://github.com/paulstringer/Slim-iOS-TestRunner">https://github.com/paulstringer/Slim-iOS-TestRunner</a></p>
 
-<h5>
-<a id="license" class="anchor" href="#license" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>License</h5>
+<h3>
+<a id="license" class="anchor" href="#license" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>License</h3>
 
 <p>OCSlimProject is available under the MIT license. See the LICENSE file for more info.</p>
       </section>
