Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <section class="main-content">
       <p>`</p><h1 align="center">
-<a id="ocslimproject" class="anchor" href="#ocslimproject" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><img src="Images/Icon.png" width="128" height="128"><br>OCSlimProject</h1>
+<a id="ocslimproject" class="anchor" href="#ocslimproject" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><img src="https://raw.githubusercontent.com/paulstringer/OCSlimProject/master/Images/Icon.png" width="128" height="128"><br>OCSlimProject</h1>
 
 <h3>
 <a id="ocslimproject-is-a-cocoapod-for-ios-and-macos-that-lets-you-create-fast-rock-solid-automated-acceptance-tests-with-xcode-and-fitnesse" class="anchor" href="#ocslimproject-is-a-cocoapod-for-ios-and-macos-that-lets-you-create-fast-rock-solid-automated-acceptance-tests-with-xcode-and-fitnesse" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>OCSlimProject is a CocoaPod for iOS and macOS that lets you create <em>fast</em>, <em>rock-solid</em>, <em>automated</em> <em>Acceptance Tests</em> with Xcode and Fitnesse.</h3>
@@ -74,7 +74,7 @@
 
 <p><strong>Architecture of an Acceptance Testing App compared with a regular App</strong></p>
 
-<p><img src="Images/Fitnesse-App-Architecture-Diagram.jpeg" alt="Fitnesse App Architecture Diagram"></p>
+<p><img src="https://raw.githubusercontent.com/paulstringer/OCSlimProject/master/Images/Fitnesse-App-Architecture-Diagram.jpeg" alt="Fitnesse App Architecture Diagram"></p>
 
 <p>Fitnesse communicates with your App using a communications protocol called <a href="http://fitnesse.org/FitNesse.UserGuide.WritingAcceptanceTests.SliM.SlimProtocol">Slim</a> (Simple List Invocation Method). The work of implementing this protocol is provided via the <a href="https://github.com/dougbradbury/cslim">cslim project</a> which contains an <a href="https://github.com/ericmeyer/ObjectiveCSlim">Objective-C</a> implementation written by Erik Myer. When choosing to write fixture with Swift it's required that your fixtures are subclasses of NSObject. </p>
 
@@ -129,7 +129,7 @@ $ make
 <h3>
 <a id="creating-an-acceptance-tests-target-is-the-next-step-after-following-this-step-your-ready-to-begin-writing-acceptance-tests" class="anchor" href="#creating-an-acceptance-tests-target-is-the-next-step-after-following-this-step-your-ready-to-begin-writing-acceptance-tests" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating an 'Acceptance Tests' target is the next step. After following this step your ready to begin writing acceptance tests.</h3>
 
-<div align="center"><img src="Images/iOS-Acceptance-Test-Template.png"></div>
+<div align="center"><img src="https://raw.githubusercontent.com/paulstringer/OCSlimProject/master/Images/Images/iOS-Acceptance-Test-Template.png"></div>
 
 <ul>
 <li><p>Add an 'AcceptanceTests' target to your Project using the 'Acceptance Tests' template. Templates are available for both iOS and macOS. macOS targets run faster, iOS targets allow you to use classes with dependancies on UIKit.</p></li>
